--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rhino-anywhere/sdk-js",
+  "name": "@rhinoanywhere/sdk-js",
   "version": "0.1.0",
   "description": "Javascript Library for connecting to RhinoAnywhere",
   "main": "index.js",
